--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "17.0.9",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
+    "autoprefixer": "^10.4.2",
     "babel-jest": "27.2.3",
     "cypress": "^9.1.0",
     "eslint": "~8.7.0",
@@ -46,9 +47,11 @@
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
     "sass": "1.43.2",
+    "tailwindcss": "^3.0.22",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
